--- a/package.json
+++ b/package.json
@@ -9,14 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "chart.js": "^4.4.4",
+    "next": "14.2.8",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
+    "react-datepicker": "^7.3.0",
     "react-dom": "^18",
-    "next": "14.2.8"
+    "react-drag-and-drop": "^3.0.0",
+    "react-select": "^5.8.0"
   },
   "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.8"
+    "tailwindcss": "^3.4.1"
   }
 }
